@@ -1,3 +1,7 @@
+2009-09-22 Fatih Aşıcı <fatih@pardus.org.tr>
+		* pisi/operations/build.py: Fix the special file patterns
+		for the new code using python magic module.
+
 2009-09-16 Ozan Çağlayan <ozan@pardus.org.tr>
 		* pisi/archive.py (ArchiveBzip2): Implement ArchiveBzip2 to support
 		.bz2 archive files,
